fixed scrollbar sizing

--- a/gs.css
+++ b/gs.css
@@ -225,8 +225,8 @@ div.document.active div.rightarrow {
 	display: block;
 	position: absolute;
 	top: 0px;
-	width: 10px;
-	height: 18px;
+	width: 32px;
+	height: 22px;
 	background-image: url('images/gs/scrollright.png');
 	border-left: 2px solid #000;
 }
@@ -244,8 +244,8 @@ div.document.active div.downarrow {
 	display: block;
 	position: absolute;
 	left: 0px;
-	width: 26px;
-	height: 10px;
+	width: 30px;
+	height: 22px;
 	background-image: url('images/gs/scrolldown.png');
 	border-top: 2px solid #000;
 }
@@ -303,8 +303,8 @@ div.alert div.rightarrow {
 	display: block;
 	position: absolute;
 	top: 0px;
-	width: 10px;
-	height: 18px;
+	width: 32px;
+	height: 22px;
 	background-image: url('images/gs/scrollright.png');
 	border-left: 2px solid #000;
 }
